# py-file-opener

./: README.md  pyproject.toml
py_file_opener/: __init__.py  __main__.py
