[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-file-opener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "inquirer>=3.4.1",
]

[project.scripts]
py-file-opener = "py_file_opener.__main__:main"